added inventory-avcart template

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                      and implementing audio/visual information systems for grant supported
                      research projects. As a software developer, Vallier creates tools and programs
                      (Max, Python, C++, R) to display, record, and manipulate multimedia stimuli.</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                  <a href="projects.html" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -151,7 +151,7 @@
                     Director of the Auditory Prostheses & Perception Laboratory.
                     She investigates the basic mechanisms underlying auditory processing by
                     cochlear implant listeners.</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                  <a href="projects-monita.html" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -162,7 +162,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Daniel Rasetshwane</h5>
                   <p class="card-text">Daniel Rasethshwane is the director of the Auditory Signal Processing Lab</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                  <a href="projects-danielR.html" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
                     audio signal processing, cochlear implant communication,
                     and data analysis. He enjoys playing guitar and trombone,
                     running in the heat, and playing Nintendo video games.</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                  <a href="projects-seth.html" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
@@ -190,7 +190,7 @@
                   He provides audio visual support for reasearch. In addition, Daniel
                   also helps organize multiple aspects of the AV Lab. Inlcuding the
                   inventory system and the website</p>
-                  <a href="#" class="btn btn-outline-warning">View Projects</a>
+                  <a href="projects-danielF.html" class="btn btn-outline-warning">View Projects</a>
                 </div>
               </div>
             </div>
