--- a/inventory-avCart.html
+++ b/inventory-avCart.html
@@ -53,8 +53,43 @@
             <a href="inventory-avCart.html" class="list-group-item list-group-item-dark active">AV Cart</a>
           </div>
         </div>
-        <div class="col-12 col-sm-9">
-          <iframe class="embed-responsive content" src="https://docs.google.com/forms/d/e/1FAIpQLScT3PrjU7f-uVng4HOyy0J0UE9j4eeExu-r2LPZrw7vFzwo-w/viewform?embedded=true" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <div class="col-12 col-sm-9" style="background:#292d31; color: white;">
+
+          <form>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputName4">Name</label>
+                <input type="password" class="form-control" id="inputPassword4" placeholder="Name">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="returndate2">Return Date</label>
+              <input type="text" class="form-control" id="inputAddress2" placeholder="MM/DD/YYYY">
+            </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Include Extra Cables
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+          <section class="p-5"></section>
+
         </div>
       </div>
     </div>
