--- a/inventory-loanRequest.html
+++ b/inventory-loanRequest.html
@@ -11,8 +11,10 @@
 
     <link rel="stylesheet" href="css/inventory.css">
     <style>
-    .sidenav{
-      width: 27%;
+    @media screen and (min-width: 576px) {
+      .sidenav{
+        width: 27%;
+      }
     }
     </style>
 
