Added cart tutorial to page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <h1 class="display-4">Highlighted Projects</h1>
                 <hr class="my-5">
                 <p>View All of our projects.</p>
-                <a class="btn btn-outline-warning btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-outline-warning btn-lg" href="projects.html" role="button">Learn more</a>
               </div>
             </div>
             <div class="col-md-6 col-12 examples p-5">
