--- a/inventory-avCart.html
+++ b/inventory-avCart.html
@@ -63,7 +63,7 @@
               </div>
               <div class="form-group col-md-6">
                 <label for="inputName4">Name</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Name">
+                <input type="name" class="form-control" id="inputname4" placeholder="Name">
               </div>
             </div>
             <div class="form-group">
@@ -84,6 +84,7 @@
 
           <section class="p-5"></section>
           <section class="p-5"></section>
+            <iframe class="embed-responsive content" src="pdfs/Audio Visual Cart Tutorial.pdf" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
           <section class="p-5"></section>
           <section class="p-5"></section>
           <section class="p-5"></section>
