Calendar improvements to AV Cart

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <title>AV Lab</title>
   </head>
-  <body>
 
+  <body>
     <!-->navigation bar</!-->
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="index.html">
@@ -36,7 +36,7 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Core Use Applications</a>
             </li>
           </ul>
         </div>
@@ -121,11 +121,11 @@
       <section class="p-5"></section>
       <section class="p-5"></section>
 
-      <!-- Personell -->
+      <!-- Personnell -->
       <section class="p-5" style="background-color: #11213f">
         <div class="container-fluid">
           <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #f29a0a">
-            <h1>personell</h1>
+            <h1>personnell</h1>
           </div>
           <div class="row justify-content-center">
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
