--- a/inventory-avCartManual.html
+++ b/inventory-avCartManual.html
@@ -18,7 +18,7 @@
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
-      </a>
+    </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav1">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,79 +46,23 @@
       <div class="row">
         <div class="col-12 col-sm-3">
           <div class="list-group-flush sidenav">
-            <a href="inventory.html" class="list-group-item list-group-item-dark active">
+            <a href="inventory.html" class="list-group-item list-group-item-dark">
               Full Inventory
             </a>
             <a href="inventory-loanRequest.html" class="list-group-item list-group-item-dark">Loan Request</a>
             <a href="inventory-avCart.html" class="list-group-item list-group-item-dark">AV Cart</a>
-            <a href="inventory-avCartManual.html" class="list-group-item list-group-item-dark">AV Cart Manual</a>
+            <a href="inventory-avCartManual.html" class="list-group-item list-group-item-dark active">AV Cart Manual</a>
           </div>
         </div>
-        <div class="col-12 col-sm-9 p-3" style="background:#292d31">
-          <div class="container-fluid content">
-            <div class="row" id="items">
-
-              <div class="col-12 col-lg-6 pb-5">
-                <div id="audio" class="row">
-                <div class="col-12">
-                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
-                    Audio
-                  </h1>
-                </div>
-
-                <div class="col-6 col-sm-4 col-lg-6 py-3">
-                  <div class="card available">
-                      <div class="card-title">
-                        Item
-                      </div>
-                    <div class="card-body"> This describes some aspects of the item</div>
-                  </div>
-                </div>
-
-                </div>
-              </div>
-
-              <div class="col-12 col-lg-6 pb-5">
-                <div id="cables" class="row">
-
-                <div class="col-12">
-                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
-                    Cables
-                  </h1>
-                </div>
-
-                </div>
-              </div>
-
-              <div class="col-12 col-lg-6 pb-5">
-                <div id="tools" class="row">
-                <div class="col-12">
-                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
-                    Tools
-                  </h1>
-                </div>
-                </div>
-              </div>
-
-              <div class="col-12 col-lg-6 pb-5">
-                <div id="video" class="row">
-                <div class="col-12">
-                  <h1 class="display-5" style="font-family: 'Cinzel', serif; color: #f29a0a">
-                    Video
-                  </h1>
-                </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
+        <div class="col-12 col-sm-9 content" style="background:#292d31; color: white;">
+            <iframe class="embed-responsive content" src="pdfs/Audio Visual Cart Tutorial.pdf" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
       </div>
     </div>
 
 
     <footer>
-      <div class="container-fuid p-4" style="background: #2e3338">
+      <div class="container-fuid p-4" style="background:#2e3338">
         <div class="row m-2 justify-content-around">
           <div class="col-sm-4 col-0"></div>
           <div class="col-sm-4 col-4">
@@ -138,6 +82,6 @@
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="js/InventoryScripts.js"></script>
+    <script src="js/avCart.js"></script>
   </body>
 </html>
