--- a/inventory-loanRequest.html
+++ b/inventory-loanRequest.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Core Use Applications</a>
             </li>
           </ul>
         </div>
@@ -58,6 +58,7 @@
             </a>
             <a href="inventory-loanRequest.html" class="list-group-item list-group-item-dark active">Loan Request</a>
             <a href="inventory-avCart.html" class="list-group-item list-group-item-dark">AV Cart</a>
+            <a href="inventory-avCartManual.html" class="list-group-item list-group-item-dark">AV Cart Manual</a>
           </div>
         </div>
         <div class="col-12 col-sm-9">
