--- a/applications.html
+++ b/applications.html
@@ -45,7 +45,7 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Core Use Applications</a>
             </li>
           </ul>
         </div>
