--- a/inventory-avCart.html
+++ b/inventory-avCart.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Core Use Applications</a>
             </li>
           </ul>
         </div>
@@ -51,43 +51,42 @@
             </a>
             <a href="inventory-loanRequest.html" class="list-group-item list-group-item-dark">Loan Request</a>
             <a href="inventory-avCart.html" class="list-group-item list-group-item-dark active">AV Cart</a>
+            <a href="inventory-avCartManual.html" class="list-group-item list-group-item-dark">AV Cart Manual</a>
           </div>
         </div>
-        <div class="col-12 col-sm-9" style="background:#292d31; color: white;">
+        <div class="col-12 col-sm-9 content" style="background:#292d31; color: white;">
 
-          <form>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+        <iframe class="p-5" src="https://calendar.google.com/calendar/embed?showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=pjua7lrlmj5supvbjr73b6pb2o%40group.calendar.google.com&amp;color=%230F4B38&amp;ctz=America%2FChicago" style="border-width:0" width="100%" height="50%" frameborder="0" scrolling="no"></iframe>
+
+          <form class="p-5" id="cartForm">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="inputName" placeholder="Name">
+            </div>
+            <div class="row">
+              <div class="form-group col-6">
+                <label for="checkoutDate">Checkout Date</label>
+                <input type="date" class="form-control" id="inputOutDate" placeholder="MM/DD/YYYY">
               </div>
-              <div class="form-group col-md-6">
-                <label for="inputName4">Name</label>
-                <input type="name" class="form-control" id="inputname4" placeholder="Name">
+              <div class="form-group col-6">
+                <label for="checkoutTime">Checkout Time</label>
+                <input type="time" class="form-control" id="inputOutTime">
               </div>
             </div>
-            <div class="form-group">
-              <label for="returndate2">Return Date</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="MM/DD/YYYY">
+            <div class="row">
+              <div class="form-group col-6">
+                <label for="returnDate">Return Date</label>
+                <input type="date" class="form-control" id="inputInDate" placeholder="MM/DD/YYYY">
+              </div>
+              <div class="form-group col-6">
+                <label for="returnTime">Return Time</label>
+                <input type="time" class="form-control" id="inputInTime">
+              </div>
             </div>
 
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
-                <label class="form-check-label" for="gridCheck">
-                  Include Extra Cables
-                </label>
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
           </form>
 
-          <section class="p-5"></section>
-          <section class="p-5"></section>
-            <iframe class="embed-responsive content" src="pdfs/Audio Visual Cart Tutorial.pdf" width="800" height="1300" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-          <section class="p-5"></section>
-          <section class="p-5"></section>
-          <section class="p-5"></section>
           <section class="p-5"></section>
           <section class="p-5"></section>
 
@@ -117,6 +116,6 @@
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="js/Scripts.js"></script>
+    <script src="js/avCart.js"></script>
   </body>
 </html>
