--- a/projects-danielF.html
+++ b/projects-danielF.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="applications.html">Applications</a>
+              <a class="nav-link" href="applications.html">Core Use Applications</a>
             </li>
           </ul>
         </div>
