--- a/inventory-avCart.html
+++ b/inventory-avCart.html
@@ -85,6 +85,15 @@
             </div>
 
             <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+
+            <div class="row pt-3">
+              <div class="col-6">
+                <h6>Result:</h6>
+              </div>
+              <div class="col-6">
+                <h6 id="result"></h6>
+              </div>
+            </div>
           </form>
 
           <section class="p-5"></section>
