--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-->navigation bar</!-->
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-light>
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark>
       <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
       </a>
