--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-->navigation bar</!-->
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark>
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
       <a href="index.html">
       <img src="images/boys town logo.png" alt="Boystown" width="110" height="100">
       </a>
@@ -125,22 +125,9 @@
       <section class="p-5" style="background-color: #11213f">
         <div class="container-fluid">
           <div class="row justify-content-center p-5" style="text-transform:uppercase; color: #f29a0a">
-            <h1>personnell</h1>
+            <h1>personnel</h1>
           </div>
           <div class="row justify-content-center">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
-              <div class="card border-0" style="width: 15rem">
-                <img class="card-img-top" src="images/TimothyV.png" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Timothy Vallier</h5>
-                  <p class="card-text">Timothy Vallier specializes in analyzing, designing,
-                     and implementing audio/visual information systems for grant supported
-                     research projects. As a software developer, Vallier creates tools and programs
-                     (Max, Python, C++, R) to display, record, and manipulate multimedia stimuli.</p>
-                  <a href="projects.html" class="btn btn-outline-warning">View Projects</a>
-                </div>
-              </div>
-            </div>
 
             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mt-5">
               <div class="card border-0" style="width: 15rem;">
